data/derived/sp14/progs/unify/prog2585.ml.out
Characters 216-231:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type ('a -> 'b list) * 'a
       Type int list is not compatible with type 'a -> 'b list 
